# Osys

./: README.md
Lab 2 Multithreading/: main.cpp
Lab1 Linux Terminal/: script.sh
Lab1 Linux Terminal/Main/: main.cpp
Lab1 Linux Terminal/StaticLib/: library.h
Linux version/Main/: CMakeLists.txt
Linux version/StaticLib/: CMakeLists.txt  library.cpp
Linux version/Vector/: CMakeLists.txt  vector.cpp  vector.h
Main_1/Main_1/: Main_1.vcxproj
Pipes (wind)/A/: A.cpp  A.sln  A.vcxproj
Pipes (wind)/M/: M.sln  M.vcxproj
Pipes (wind)/P/: P.sln  P.vcxproj
Pipes (wind)/P/x64/Debug/: P.exe.recipe
Pipes (wind)/P/x64/Debug/P.tlog/: P.lastbuildstate
Pipes (wind)/Pipes/: Pipes.sln  Pipes.vcxproj
Pipes (wind)/Pipes/x64/Debug/: Pipes.exe.recipe
Pipes (wind)/Pipes/x64/Debug/Pipes.tlog/: Pipes.lastbuildstate
Pipes (wind)/S/: S.cpp  S.sln  S.vcxproj
Pipes (wind)/S/x64/Debug/: S.exe.recipe
Pipes (wind)/S/x64/Debug/S.tlog/: S.lastbuildstate
Pipes(Linux)/A/: main.cpp
VectorLib/VectorLib/: Vector.cpp  VectorLib.vcxproj
Windows + Linux vers/: linux_version.cpp  windows_version.cpp
Windows version/Main_1/: Main_1.sln
Windows version/Main_1/Main_1/: Main_1.cpp
Windows version/VectorLib/: VectorLib.sln
Windows version/VectorLib/VectorLib/: Vector.h  VectorLib.vcxproj
Windows version/slnNumbersLib/NumbersLib/: Numbers.h  NumbersLib.vcxproj  NumbersLib.vcxproj.filters
channel/: buffered_channel.h  main.cpp
matrix_plus_channel/: buffered_channel.h  main.cpp
slnNumbersLib/: slnNumbersLib.sln
slnNumbersLib/NumbersLib/: Numbers.cpp
